First set of wrangling complete.

--- a/notebooks/loading_WORM.ipynb
+++ b/notebooks/loading_WORM.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2b4708c9",
    "metadata": {},
    "source": [
     "Loading the WORM bucket.  Will start with S3fs.  Note that I have already configured my AWS credentials in the AWS CLI."
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "85746656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +20,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a2fce6ba",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +38,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66162946",
    "metadata": {},
    "source": [
     "I am now learning that writing from local to S3 using s3fs is not what s3fs was made for.  It is more for reading files.  I'l now try boto3."
@@ -50,7 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4b02f0c5",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +111,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1276f6bc",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +134,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8b34c6c7",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +158,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e546cc35",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +183,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c3d723c1",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +349,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b283ece7",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +366,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b72822fc",
    "metadata": {},
    "source": [
     "That was very slow.  But, it is slow on the terminal as well."
@@ -385,7 +374,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "87d42b38",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +396,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "74fad88b",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +417,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8311ccf2",
    "metadata": {},
    "source": [
     "Why is the list from s3fs different from the list from AWS CLI? I'll reset, try again, and then try to load a df from an existing file."
@@ -439,7 +425,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e3ee9512",
    "metadata": {},
    "outputs": [
     {
@@ -456,14 +441,13 @@
     }
    ],
    "source": [
-    "fs = s3fs.S3FileSystem(anon=False,key='AKIASQCX6MEBOZF7WCYA',secret='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')\n",
+    "fs = s3fs.S3FileSystem(anon=False,key='########',secret='##############')\n",
     "fs.ls('worm-begin')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "44d54ead",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +457,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b34c93e4",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +854,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a760b31d",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +876,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "503d8f0b",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +898,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8b425977",
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +921,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fcf9a44",
    "metadata": {},
    "source": [
     "Upload to WORM bucket of everything to date is complete."
@@ -949,7 +928,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc62d282",
    "metadata": {},
    "source": [
     "Check the boto download method..."
@@ -958,7 +936,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9729dfd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +948,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "cd6e34cc",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
