--- a/notebooks/Wrangle_7.ipynb
+++ b/notebooks/Wrangle_7.ipynb
@@ -23,7 +23,7 @@
     "import boto3\n",
     "\n",
     "import s3fs\n",
-    "fs = s3fs.S3FileSystem(anon=False,key='AKIASQCX6MEBFKYISX4G',secret='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')\n",
+    "fs = s3fs.S3FileSystem(anon=False,key='#####',secret='#####",
     "\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv(verbose=True)\n",
