--- a/notebooks/Step_3_NLP_preprocessing.ipynb
+++ b/notebooks/Step_3_NLP_preprocessing.ipynb
@@ -1301,7 +1301,7 @@
    "id": "c887ddf2",
    "metadata": {},
    "source": [
-    "Identify Sentiment"
+    "Identify Sentiment, using affinity work from earlier."
    ]
   },
   {
@@ -1342,6 +1342,23 @@
    "source": [
     "%%time\n",
     "genres_df['sent_label'] = genres_df['lyrics'].apply(sentiment_check)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fc0fea2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Two additional cleanups.  Found during further EDA.  Remove tiny genres, remove three\n",
+    "#songs that have NaN lyrics.\n",
+    "\n",
+    "genres_df.drop(genres_df[genres_df['genre']=='Samba'].index, inplace = True)\n",
+    "genres_df.drop(genres_df[genres_df['genre']=='Sertanejo'].index, inplace = True)\n",
+    "genres_df.drop(genres_df[genres_df['genre']=='Funk Carioca'].index, inplace = True)\n",
+    "\n",
+    "genres_df = genres_df.dropna(axis=0, subset=['lyrics'])"
    ]
   },
   {
