--- a/notebooks/Step_5_Create_Stop_and_Unique_Words.ipynb
+++ b/notebooks/Step_5_Create_Stop_and_Unique_Words.ipynb
@@ -5,7 +5,7 @@
    "id": "6f58e785",
    "metadata": {},
    "source": [
-    "Taking the g_train dataset and creating a stopwords list covering all music, and then three sets of words unique to each genre (Rock, Pop, Hip Hop).\n",
+    "Taking the g_train dataset (NB Test_Step_4, random seed 200, 80% of total dataset) and creating a stopwords list covering all music, and then three sets of words unique to each genre (Rock, Pop, Hip Hop).\n",
     "\n",
     "This is a unique, nonproduction, lots-of-touch-labor kind of an operation.  Not putting together a code block for this one."
    ]
