Additional feature added

--- a/notebooks/Step_6_NLP_preprocessing_Round_2.ipynb
+++ b/notebooks/Step_6_NLP_preprocessing_Round_2.ipynb
@@ -2002,14 +2002,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aada4849",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "id": "24e9984c",
    "metadata": {
@@ -2050,6 +2042,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "aada4849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convert genre_count NaNs to zeros."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "id": "86e299f6",
    "metadata": {},
@@ -2079,6 +2081,17 @@
     "g_df['sml_rock_genre_count'] = g_df['sml_rock_genre_count'].fillna(0)\n",
     "g_df['sml_hiphop_genre_count'] = g_df['sml_hiphop_genre_count'].fillna(0)\n",
     "g_df['sml_pop_genre_count'] = g_df['sml_pop_genre_count'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14355544",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a new feature combining all genre_counts.  \n",
+    "#Waste of time.  Shouldn't have done this."
    ]
   },
   {
@@ -2656,6 +2669,117 @@
     "g_df.to_csv('g_df_final_fix_obj')\n",
     "\n",
     "upload_file_to_bucket('final-music-flow','g_df_final_fix_obj')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f60bb75a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Fix the [size]_sent_score issue.\n",
+    "g_g_df['med_sent_score']=g_g_df['med_sent_score'].str.replace('[' ,'')\n",
+    "g_g_df['med_sent_score']=g_g_df['med_sent_score'].str.replace(']' ,'')\n",
+    "g_g_df['med_sent_score'] = pd.to_numeric(g_g_df['med_sent_score'], downcast='float')\n",
+    "\n",
+    "g_df['sml_sent_score']=g_df['sml_sent_score'].str.replace('[' ,'')\n",
+    "g_df['sml_sent_score']=g_df['sml_sent_score'].str.replace(']' ,'')\n",
+    "g_df['sml_sent_score'] = pd.to_numeric(g_df['sml_sent_score'], downcast='float')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c65bd06f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create features indicating if there is a genre_specific word in the [size]_lyric.  0 or 1.\n",
+    "\n",
+    "g_df['sml_rock_bool'] = -1\n",
+    "\n",
+    "for i in g_df.index:\n",
+    "    if g_df.iloc[i]['sml_rock_genre_count']>0:\n",
+    "        g_df.at[i, 'sml_rock_bool'] = 1\n",
+    "    else:\n",
+    "        g_df.at[i, 'sml_rock_bool'] = 0 \n",
+    "        \n",
+    "g_df['sml_pop_bool'] = -1\n",
+    "\n",
+    "for i in g_df.index:\n",
+    "    if g_df.iloc[i]['sml_pop_genre_count']>0:\n",
+    "        g_df.at[i, 'sml_pop_bool'] = 1\n",
+    "    else:\n",
+    "        g_df.at[i, 'sml_pop_bool'] = 0 \n",
+    "\n",
+    "g_df['sml_hiphop_bool'] = -1\n",
+    "\n",
+    "for i in g_df.index:\n",
+    "    if g_df.iloc[i]['sml_hiphop_genre_count']>0:\n",
+    "        g_df.at[i, 'sml_hiphop_bool'] = 1\n",
+    "    else:\n",
+    "        g_df.at[i, 'sml_hiphop_bool'] = 0 \n",
+    "\n",
+    "g_df['med_rock_bool'] = -1\n",
+    "\n",
+    "for i in g_df.index:\n",
+    "    if g_df.iloc[i]['med_rock_genre_count']>0:\n",
+    "        g_df.at[i, 'med_rock_bool'] = 1\n",
+    "    else:\n",
+    "        g_df.at[i, 'med_rock_bool'] = 0 \n",
+    "        \n",
+    "g_df['med_pop_bool'] = -1\n",
+    "\n",
+    "for i in g_df.index:\n",
+    "    if g_df.iloc[i]['med_pop_genre_count']>0:\n",
+    "        g_df.at[i, 'med_pop_bool'] = 1\n",
+    "    else:\n",
+    "        g_df.at[i, 'med_pop_bool'] = 0 \n",
+    "        \n",
+    "g_df['med_hiphop_bool'] = -1\n",
+    "\n",
+    "for i in g_df.index:\n",
+    "    if g_df.iloc[i]['med_hiphop_genre_count']>0:\n",
+    "        g_df.at[i, 'med_hiphop_bool'] = 1\n",
+    "    else:\n",
+    "        g_df.at[i, 'med_hiphop_bool'] = 0 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29909886",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Reorganize the columns.\n",
+    "g2_df = pd.DataFrame((g_df), columns=['genre','song_name','lyrics',\n",
+    "                                      'full_word_count','full_character_count','full_avg_word_length',\n",
+    "                                      'med_lyrics','med_word_count','med_character_count','med_avg_word_length',\n",
+    "                                      'med_content_affin','med_sent_label','med_sent_score','med_vector',\n",
+    "                                      'med_rock_genre_count','med_rock_bool',\n",
+    "                                      'med_hiphop_genre_count','med_hiphop_bool',\n",
+    "                                      'med_pop_genre_count','med_pop_bool',\n",
+    "                                      'med_genre_count',\n",
+    "                                      'sml_lyrics','sml_word_count','sml_character_count','sml_avg_word_length',\n",
+    "                                      'sml_content_affin','sml_sent_label','sml_sent_score','sml_vector',\n",
+    "                                      'sml_rock_genre_count','sml_rock_bool',\n",
+    "                                      'sml_hiphop_genre_count','sml_hiphop_bool',\n",
+    "                                      'sml_pop_genre_count','sml_pop_bool',\n",
+    "                                      'sml_genre_count'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca94d114",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g2_df.to_csv('g2_df')\n",
+    "\n",
+    "upload_file_to_bucket('final-music-flow','g2_df')"
    ]
   }
  ],
