--- a/notebooks/False_Starts_and_Random_Thoughts/Decades_or_Genres.ipynb
+++ b/notebooks/False_Starts_and_Random_Thoughts/Decades_or_Genres.ipynb
@@ -23,7 +23,7 @@
     "import boto3\n",
     "\n",
     "import s3fs\n",
-    "fs = s3fs.S3FileSystem(anon=False,key='AKIASQCX6MEBJBYQZ6OC',secret='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')"
+    "fs = s3fs.S3FileSystem(anon=False,key='###'',secret='KIyIZWD7VHskWyBECckZr6/KNizFiu+7AtbdaJIg')"
    ]
   },
   {
